header, hero, covers fix
- modified css
- fixed animation

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -56,7 +56,7 @@
 }
 
 .marquee__line2 {
-  animation-direction: reverse;
+  animation-direction: alternate-reverse;
 }
 
 .marque-image {
