--- a/src/css/header.css
+++ b/src/css/header.css
@@ -249,4 +249,8 @@ html {
     width: 163px;
     height: 55px;
   }
+
+  .header-container .navigation {
+    padding: 32px;
+  }
 }
